[package]
name = "mcp3208"
description = "A MCP3208 sensor driver for Rust."
version = "1.0.0"
authors = ["Philip Trauner <philip.trauner@arztpraxis.io>", "Kai Giebeler <github@kai.giebeler.de>"]
repository = "https://github.com/kawogi/rust-mcp3208"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "external-ffi-bindings"]
keywords = ["mcp3208", "spi", "sensor", "driver", "linux", "adc"]

[dependencies]
[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.3.0"
